- fix the bug about incorrect use of Stream